1999-04-02 (23:53) Alex Roberts  <bse@gedit.pn.org>

	* gE_mdi.c: (gE_document_create_view) Reactivated the signal connection
	  for "insert_text"... now i just get Gtk-CRITICAL errors from
	  gtk_text_set_point.. maybe its not referencing the TextWidget
	  properly.. even tho the auto indent itself is working.. grr..
	
	* commands.c: (auto_indent_cb) !data->window->auto_indent should be
	  !settings->auto_indent.. turning auto indent off should work now,
	  as soon as i get the rest of auto indent implemented

1999-04-02 (23:40) Alex Roberts  <bse@gedit.pn.org>

	* gE_mdi.c: (gE_add_view) This is pretty much a kludge. Just the same
	  as the old file_open_in_new_win_cb function (commands.c)..

1999-04-02 (23:22) Alex Roberts  <bse@gedit.pn.org>

	* commands.c: (gE_event_button_press) Put the debug output of this
	  function into an #ifdef..

1999-04-02 (23:07) Alex Roberts  <bse@gedit.pn.org>

	* gE_mdi.c: Added replacement to the context popup menu for the text
	  widget. Now in a Gnome Popup menu, with spiffy stock pixmaps :)
	  (gE_document_create_view) Attached the popup menu GnomeUIINFO to the
	  text widget.
	  
	* commands.c: (edit_cut_cb, edit_copy_cb, edit_paste_cb, edit_selall_cb)
	  Replaced gnome_app_error with gnome_app_flash.. how the hell did that 
	  get there?! I must have been tired when I wrote that! ;)

1999-03-27 (20:18) Alex Roberts  <bse@gedit.pn.org>

	* commands.c (doc_insert_text_cb) removed some really annoying debug 
	  message.
	
	* gE_prefs_box.c: (gE_window_refresh) Re-implemented statusbar visibility
	  refreshing from the prefs box.

1999-03-20 (19:40) Alex Roberts  <bse@dial.pipex.com>

	* menus.c:
	  commands.[ch]: (window_new_cb): Use gnome_mdi_open_toplevel() to create a
	  new window. We now have the "Create new window" feature back! YAY!

	* gE_mdi.[ch]:
	  gedit.c: (main) Added signal connections for add_view and add_child. They
	  dont do anything yet, and i'm not sure if they ever will.
