@@ -361,7 +361,7 @@ auto_indent_toggle_cb(GtkWidget *w, gpointer cbdata)
 /* FIXME: All this gE_windiw stuff is annoying.. should be able to fix it later */
 gint
 auto_indent_cb(GtkWidget *text, char *insertion_text, int length,
-	int *pos)
+	int *pos, gpointer cbdata)
 {
 	int i, newlines, newline_1 = 0;
 	gchar *buffer, *whitespace;
