@@ -1,3 +1,8 @@
+1999-04-03 (00:25) Alex Roberts  <bse@gedit.pn.org>
+	
+	* commands.[ch]: (auto_indent_cb) Added extra arg to the function, so
+	  we dont set the int *pos to 0 by accedent.
+
 1999-04-02 (23:53) Alex Roberts  <bse@gedit.pn.org>
 
 	* gE_mdi.c: (gE_document_create_view) Reactivated the signal connection
